# homework

./: README.md
.github/workflows/: Ubuntu_cpp.yaml  Windows_cpp.yaml
cpp/: .gitignore  CMakeLists.txt
cpp/scripts/: install_conan.ps1  install_conan.sh
cpp/src/task0310/: Queue.hpp  README.md  main.cpp
cpp/src/task1010/: Queue.hpp  Queue_ptr.hpp  README.md  Stack_pair.hpp
cpp/src/task1309/: README.md  main.cpp  part1.hpp  part2.hpp  part3.hpp
cpp/src/task1611/: main.cpp  meta_loop.hpp  monomial_2d.hpp
cpp/src/task1710/: README.md  Stack.hpp  main.cpp
cpp/src/task1909/: README.md  main.cpp  part1.hpp  part2.hpp
cpp/src/task2410/: Fibonachi.hpp  README.md  main.cpp
cpp/src/task2609/: README.md  main.cpp  part1.hpp
cpp/src/task3110/: README.md  main.cpp  meta_fib.hpp  meta_pow.hpp  meta_vector.hpp
cpp/test/test0310/: test0310.cpp
cpp/test/test1010/: test1010.cpp
cpp/test/test1309/: test1309.cpp
cpp/test/test1710/: test1710.cpp
cpp/test/test1909/: test1909.cpp
cpp/test/test2410/: test2410.cpp
cpp/test/test2609/: test2609.cpp
mpi/: .gitignore  CMakeLists.txt  Makefile  task1.cpp  task10.cpp  task11.cpp  task12.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
mpi/output/: output1.txt  output10.txt  output11.txt  output12.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
mpi/utils/: control_codes.h  enumerate.h  massivops.h  randvector.h  vector_util.h
python/: .gitignore  requirements.txt
python/src/task1/: jupyter.ipynb  task1.py
python/src/task2/: README.md  jupyter.ipynb  task2.py
python/src/task3/: jupyter.ipynb  task3.py
python/src/task4/: jupyter.ipynb  task4.py
